* DYN (lazy loader) is now rules completed. May be used in production
* tests suites may be now run with default memory limit
* _extension not available_ message is received by all PHPUnit test listeners
* add a new PHPUnit test listener useful to know what reference is loaded and tested
* add composer support (GH-102 request)
* raise PHP_Reflect dependency to 1.9.0

.Bug fixes:
* none


== Version 2.23.1 _(2013-09-23)_

.Additions and changes:
* none

.Bug fixes:
* GH-101: about json constants and pdf function in unit tests (Thanks to Remi Collet)


== Version 2.23.0 _(2013-09-19)_

.Additions and changes:
* add 3 new extensions: htscanner, PDFlib, Rar
* update APCu reference to 4.0.2
* update pthreads reference to 0.0.45
* introduces an experimental `DYN` lazy loader references ( NOT YET OPERATIONAL, missing rules implementations )
* drop support of PHP4 reference
* drop support of PHP 5.2

.Bug fixes:
* none


== Version 2.22.0 _(2013-08-22)_

.Additions and changes:
* phar _--version_ switch now print the latest version rather than DEV
* add new function setExcludeVersions() in abstract PHP_CompatInfo_Reference_PluginsAbstract class
  that allow to exclude one or more version for an element ( related to issue GH-99 )

.Bug fixes:
* GH-99: SO_BINDTODEVICE exists in php >= 5.4.18 and >= 5.5.1 (so not in 5.5.0)


== Version 2.21.0 _(2013-08-17)_

.Additions and changes:
* update mongo reference to 1.4.3
* update libxml reference for PHP 5.5.2

.Bug fixes:
* request #98 fixed mongo, sockets and standard references (thanks to Remi Collet)
* GH-97: False positive classMemberAccessOnInstantiation detection


== Version 2.20.0 _(2013-07-20)_

.Additions and changes:
* add support to PHP 5.5.1
* update session and intl references sync with PHP 5.5.1

.Bug fixes:
* none


== Version 2.19.0 _(2013-07-11)_

.Additions and changes:
* update xcache reference to 3.0.3

.Bug fixes:
* none


== Version 2.18.0 _(2013-06-24)_

.Additions and changes: